Positioned logo and input horizontallly and vertically with flexbox and padding

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
+        <header></header>
         <main>
-            <label for="search">
-                <img src="images/googlelogo_color_272x92dp.png" alt="Google">
-            </label>
-            <input type="text" id="search" name="search">
+            <section class="main-sec">
+                <label for="search">
+                    <img src="images/googlelogo_color_272x92dp.png" alt="Google" class="logo">
+                </label>
+                <input type="text" id="search" name="search" class="search-bar" maxlength="2048">
+            </section>
         </main>
+        <footer></footer>
     </body>
 </html>
