Formatting footer to bottom of page

--- a/index.html
+++ b/index.html
@@ -38,16 +38,20 @@
             </form>
         </main>
         <footer>
-            <ul class="left list">
-                <li><a href="#">Advertising</a></li>
-                <li><a href="#">Business</a></li>
-                <li><a href="#">How Search Works</a></li>
-            </ul>
-            <ul class="right list">
+            <div class="left">
+                <ul class="list">
+                    <li><a href="#">Advertising</a></li>
+                    <li><a href="#">Business</a></li>
+                    <li><a href="#">How Search Works</a></li>
+                </ul>
+            </div>
+            <div class="right">
+            <ul class="list">
                 <li><a href="#">Privacy</a></li>
                 <li><a href="#">Terms</a></li>
                 <li><a href="#">Settings</a></li>
             </ul>
+            </div>
         </footer>
     </body>
 </html>
