--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <header>
             <nav>
                 <ul class="left list">
-                    <li class="top-nav"><a href="#">About</a></li>
-                    <li class="top-nav"><a href="#">Store</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Store</a></li>
                 </ul>
                 <ul class="right list">
-                    <li class="top-nav"><a href="#">Gmail</a></li>
-                    <li class="top-nav"><a href="#">Images</a></li>
-                    <li class="top-nav"><a href="#"><img src="images/apps-24px.svg" alt="Google Apps" title="Google Apps" class="apps-img"></a></li>
-                    <li class="top-nav">
+                    <li><a href="#">Gmail</a></li>
+                    <li><a href="#">Images</a></li>
+                    <li><a href="#"><img src="images/apps-24px.svg" alt="Google Apps" title="Google Apps" class="apps-img"></a></li>
+                    <li>
                         <button type="button" class="sign-in-btn">Sign In</button>
                     </li>
                 </ul>
@@ -31,27 +31,23 @@
                     <img src="images/googlelogo_color_272x92dp.png" alt="Google" class="logo">
                 </label>
                 <input type="text" id="search" name="search" class="search-bar" maxlength="2048">
-                <div class="buttons">
+                <div class="main-btn-wrap">
                     <button type="button" class="main-btn">Google Search</button>
                     <button type="button" class="main-btn">I'm Feeling Lucky</button>
                 </div>
             </form>
         </main>
         <footer>
-            <div class="left">
-                <ul class="list">
-                    <li><a href="#">Advertising</a></li>
-                    <li><a href="#">Business</a></li>
-                    <li><a href="#">How Search Works</a></li>
-                </ul>
-            </div>
-            <div class="right">
+            <ul class="list">
+                <li><a href="#">Advertising</a></li>
+                <li><a href="#">Business</a></li>
+                <li><a href="#">How Search Works</a></li>
+            </ul>
             <ul class="list">
                 <li><a href="#">Privacy</a></li>
                 <li><a href="#">Terms</a></li>
                 <li><a href="#">Settings</a></li>
-            </ul>
-            </div>
+            </ul>  
         </footer>
     </body>
 </html>
